# sudoku

./: CMakeLists.txt  LICENSE  README.md
src/: CMakeLists.txt  error.hpp  main.cpp  solve.cpp  solve.hpp
src/solve/: adjacency_matrix.cpp  adjacency_matrix.hpp  solve_impl.cpp  solve_impl.hpp  valid_options.cpp  valid_options.hpp
src/types/: board.cpp  board.hpp  index.hpp  tile.hpp
src/utility/: indices.hpp
tests/: CMakeLists.txt  fake_test.cpp  test_board.cpp  test_index.cpp  test_is_valid.cpp  test_matrix.cpp  test_solve.cpp  test_tile.cpp  test_valid_options.cpp
